tests/toy/neg/000488_mutation.toylang
program a = { a = do a == a; } .
